--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==3.1.1
 jmespath==1.0.0
 Mako==1.2.0
 MarkupSafe==2.1.1
+psycopg2-binary==2.9.3
 PyJWT==2.3.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
