Edit user finished

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 FLASK_APP=appfolderhere
+FLASK_DEBUG = 1
 SECRET_KEY=keyhere
 S3_BUCKET=buckethere
 S3_KEY=keyhere
 S3_SECRET=secrethere
+SQLALCHEMY_DATABASE_URI=
