--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
 alembic==1.7.7
+bidict==0.22.0
 boto3==1.21.46
 botocore==1.24.46
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
 click==8.1.0
+dnspython==1.16.0
+eventlet==0.30.2
 Flask==2.1.0
 Flask-Admin==1.6.0
 Flask-Cors==3.0.10
 Flask-Login==0.6.0
 Flask-Migrate==3.1.0
+Flask-SocketIO==5.2.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
@@ -19,6 +28,9 @@ psycopg2-binary==2.9.3
 PyJWT==2.3.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+python-engineio==4.3.2
+python-socketio==5.6.0
+requests==2.27.1
 s3transfer==0.5.2
 six==1.16.0
 SQLAlchemy==1.4.32
