--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.1.0
 dnspython==1.16.0
+email-validator==1.2.1
 eventlet==0.30.2
 Flask==2.1.0
 Flask-Admin==1.6.0
