--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^6.1.1",
+    "dotenv": "^16.0.1",
     "jquery": "^3.6.0",
     "react-open-weather": "^1.2.1",
+    "react-tooltip": "^4.2.21",
     "uuid": "^8.3.2"
   }
 }
