Added graph for weather

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.8.0",
     "html-react-parser": "^1.4.14",
     "js-cookie": "^3.0.1",
     "parser": "^0.1.4",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
     "react-open-weather": "^1.2.1",
     "react-quill": "^2.0.0-beta.4",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
