Added laflet map functionality, weather graph

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "chart.js": "^3.8.0",
     "html-react-parser": "^1.4.14",
     "js-cookie": "^3.0.1",
+    "leaflet-geosearch": "^3.6.1",
     "parser": "^0.1.4",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
+    "react-leaflet": "^4.0.0",
     "react-open-weather": "^1.2.1",
     "react-quill": "^2.0.0-beta.4",
     "react-redux": "^8.0.1",
