--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
     "leaflet-geosearch": "^3.6.1",
+    "random-item": "^4.0.1",
     "react-leaflet": "^4.0.0",
     "react-open-weather": "^1.2.1",
     "react-tooltip": "^4.2.21",
