--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.2",
-    "@mui/styled-engine-sc": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -28,6 +25,7 @@
     "leaflet-geosearch": "^3.6.1",
     "parser": "^0.1.4",
     "postcss": "^8.4.14",
+    "random-item": "^4.0.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
