--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
-  "dependencies": {
-    "@fortawesome/fontawesome-pro": "^6.1.1",
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^1.0.6",
-    "dotenv": "^16.0.1",
-    "jquery": "^3.6.0",
-    "leaflet": "^1.8.0",
-    "leaflet-geosearch": "^3.6.1",
-    "random-item": "^4.0.1",
-    "react-leaflet": "^4.0.0",
-    "react-open-weather": "^1.2.1",
-    "react-tooltip": "^4.2.21",
-    "tailwindcss": "^3.1.6",
-    "uuid": "^8.3.2"
+  "scripts": {
+    "heroku-postbuild": "npm run build --prefix frontend",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "npm --prefix backend install backend && npm --prefix frontend install frontend",
+    "sequelize": "npm run --prefix backend sequelize",
+    "sequelize-cli": "npm run --prefix backend sequelize-cli",
+    "start": "npm start --prefix backend"
   }
 }
